Fix alignments and add sign up button in the hero
Moved some divs around and used css to get alignments correct

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 /*Header Styles*/
@@ -7,21 +8,25 @@
 .header {
     background-color: #1F2937;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     align-items: center;
 }
 
 .header ul {
     list-style-type: none;
     display: flex;
-    gap: 16px;
+    justify-content: space-evenly;
+    gap: 20px;
+
 }
 
 .header .logo {
     font-size: 24px;
+    font-weight: bolder;
     color: #F9FAF8;
     display: flex;
-    margin-right: auto;
+    justify-content: center;
+    margin-right: 300px;
 }
 
 .header .head-links {
@@ -29,25 +34,53 @@
     color: #E5E7EB;
 }
 
-.hero {
+.hero-container {
     background-color: #1F2937;
     display: flex;
     align-items: center;
+    justify-content: space-around;
+    height: 400px;
 }
 
-.hero .left {
+.hero {
+    display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   width: 400px;
+}
+
+.hero-text {
     font-size: 24px;
     font-weight: bolder;
     color: #F9FAF8;
     display: flex;
-    justify-content: center;
+    margin-bottom: -50px;
 }
 
-.hero .right {
+.hero-subtext {
+    display: flex;
+    color: #E5E7EB;
+}
+
+.signup {
+    display: flex;
+}
+
+.btn {
+    width: 100px;
+    height: 30px;
+    border-radius: 8px;
+    background-color: rgb(37, 117, 221);
+    color: #F9FAF8;
+    border: none;
+    font-weight: 900;
+}
+
+
+.img {
     font-size: 18px;
     color: #E5E7EB;
     display: flex;
-    justify-content: center;
     width: 400px;
     height: 200px;
     background-color: grey;
